Fix code overflow
Please no remove :)

--- a/themes/tuna/static/css/style.css
+++ b/themes/tuna/static/css/style.css
@@ -43,6 +43,7 @@ a:visited { color: #000000 }
 .chroma {
     color: #D6C9A4;
     background-color: #1D2021;
+    overflow-y: hidden;
 }
 
 .chroma .lnlinks {
